k8s/seafile/templates/deployment.memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: memcached

  template:
    metadata:
      labels:
        app: memcached
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: disktype
                    operator: In
                    values: [ssd]

      containers:
        - name: memcached
          image: memcached:1.6.38-alpine
          args: ["-m", "256"]
          ports:
            - name: memcached
              containerPort: 11211
          resources:
            requests:
              memory: "15Mi"
              cpu: "10m"
