k8s/seafile/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30000
  selector:
    app: seafile
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - port: 3306
      targetPort: mariadb
      protocol: TCP
      name: mariadb
  selector:
    app: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  ports:
    - port: 11211
      targetPort: memcached
      protocol: TCP
      name: memcached
  selector:
    app: memcached
