k8s/seafile/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`files.kevingomez.fr`)
      services:
        - kind: Service
          name: seafile
          port: http
  tls:
    certResolver: letsencrypt
